# workscale-simulator

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml
.github/: pull_request_template.md
backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/modules/company/: __init__.py  formulas.py  schemas.py  service.py
backend/app/modules/country/: __init__.py  routes.py  schemas.py  service.py
backend/app/modules/country/data/: country_presets.json
backend/app/modules/energy/: __init__.py  formulas.py  schemas.py
backend/app/modules/pricing/: __init__.py  formulas.py  schemas.py  service.py
backend/app/modules/productivity/: __init__.py  formulas.py  schemas.py
backend/app/modules/report/: routes.py  schemas.py  service.py
backend/app/modules/schedule/: __init__.py  schemas.py  service.py
backend/app/modules/simulation/: __init__.py  comparison_service.py  routes.py  schemas.py  service.py
backend/app/tests/: test_api_compare_simulations.py  test_api_country_presets.py  test_api_health.py  test_api_report_export.py  test_api_simulations.py  test_burnout_formulas.py  test_company_costs.py  test_country_presets.py  test_energy_formulas.py  test_main.py  test_pricing.py  test_productivity_formulas.py  test_report_export.py  test_scenario_comparison.py  test_simulation_service.py  test_simulation_with_company_pricing.py
docs/: 00-getting-started.md  01-overview.md  02-product-vision.md  03-mathematical-model.md  04-energy-model.md  05-productivity-model.md  06-burnout-and-recovery.md  12-api.md  (+12 more)
(+39 files in other folders)
