[project]
name = "workscale-simulator-backend"
version = "0.1.0"
description = "Backend for WorkScale Simulator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.0",
    "ruff>=0.0.270",
    "mypy>=1.3.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "SIM"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "app.tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]


